force-app/main/default/objects/Case/fields/Activation_Date_Class__c.field-meta.xml
<CustomField>
    <fullName>Activation_Date_Class__c</fullName>
    <formula>IF( NOT( ISNULL ( Account.Admin_FMS__c )), &#39;complete&#39;, IF( NOW() - CreatedDate &gt; 21, &#39;late&#39;, if( NOW() - CreatedDate &gt; 14, &#39;atrisk&#39;, &#39;incomplete&#39;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Activation Date Class</label>
    <type>Text</type>
</CustomField>