force-app/main/default/objects/Case/fields/All_Windows_Updates_Installed__c.field-meta.xml
<CustomField>
    <fullName>All_Windows_Updates_Installed__c</fullName>
    <label>All Windows Updates Installed</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>