force-app/main/default/objects/Case/fields/Case_ART__c.field-meta.xml
<CustomField>
    <fullName>Case_ART__c</fullName>
    <formula>ClosedDate  -  SR_Date_Created__c</formula>
    <label>Case ART</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>