force-app/main/default/objects/Case/fields/Case_Count__c.field-meta.xml
<CustomField>
    <fullName>Case_Count__c</fullName>
    <description>Used to roll up number of Cases</description>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Count</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>