force-app/main/default/objects/Case/fields/Case_Order__c.field-meta.xml
<CustomField>
    <fullName>Case_Order__c</fullName>
    <formula>IF(
    AND( 
            NOT(
            ISPICKVAL(Status, &quot;Closed&quot;)), 
                    RecordType.Name = &#39;Activation&#39;), 
                    &quot;Activation Type&quot;, 
                     TEXT( 
                              datevalue(CreatedDate) 
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Order</label>
    <type>Text</type>
</CustomField>