force-app/main/default/objects/Case/fields/Case_Owner_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Case_Owner_End_Time__c</fullName>
    <formula>Value(Text( Owner:User.EndDay ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Owner End Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>