force-app/main/default/objects/Case/fields/Case_Owner_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Case_Owner_Start_Time__c</fullName>
    <formula>Value(Left(Text(Owner:User.StartDay), 1))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Owner Start Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>