force-app/main/default/objects/Case/fields/Case_Owner_Team_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Case_Owner_Team_Assignment__c</fullName>
    <description>Updated by a workflow rule to put the team of the case owner when the case is updated</description>
    <label>Case Owner Team Assignment</label>
    <length>50</length>
    <type>Text</type>
</CustomField>