force-app/main/default/objects/Case/fields/Case_Type__c.field-meta.xml
<CustomField>
    <fullName>Case_Type__c</fullName>
    <description>The type of case being created.</description>
    <inlineHelpText>Which area the case needs to be created for.</inlineHelpText>
    <label>Case Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Support</fullName>
            </value>
            <value>
                <fullName>Billing Services</fullName>
            </value>
            <value>
                <fullName>Coding Services</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Development</fullName>
            </value>
            <value>
                <fullName>Preload</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>