force-app/main/default/objects/Case/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Administrative</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Technical</fullName>
            </value>
            <value>
                <fullName>Collections</fullName>
            </value>
            <value>
                <fullName>Generic</fullName>
            </value>
            <value>
                <fullName>Change Payment Terms</fullName>
            </value>
            <value>
                <fullName>Feature Enhancement</fullName>
            </value>
            <value>
                <fullName>Open Invoice</fullName>
            </value>
            <value>
                <fullName>Past Due</fullName>
            </value>
            <value>
                <fullName>Setup Billing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>