force-app/main/default/objects/Case/fields/Churn_Risk__c.field-meta.xml
<CustomField>
    <fullName>Churn_Risk__c</fullName>
    <inlineHelpText>After speaking with the decision maker please select the likelihood for canceling for this account.</inlineHelpText>
    <label>Churn Risk</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>