force-app/main/default/objects/Case/fields/Claim_Graphics__c.field-meta.xml
<CustomField>
    <fullName>Claim_Graphics__c</fullName>
    <description>Allows the user to create a Graphics Setup Task from a list view</description>
    <formula>IF(ISNULL( Graphics_Task_Claimed__c ), HYPERLINK(&#39;/00T/e?RecordType=012i0000001EAMB&amp;who_id=&#39; &amp; $User.Id &amp; &#39;&amp;what_id=&#39; &amp; Id &amp; &#39;&amp;00Ni000000DPNTk=Graphics%20Setup&amp;tsk5=Graphics%20Setup&amp;retURL=/&#39; &amp; Id, &#39;Claim Graphics&#39;), &#39;CLAIMED&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Claim Graphics</label>
    <type>Text</type>
</CustomField>