force-app/main/default/objects/Case/fields/Computer_Type__c.field-meta.xml
<CustomField>
    <fullName>Computer_Type__c</fullName>
    <label>Computer Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Laptop</fullName>
            </value>
            <value>
                <fullName>Desktop</fullName>
            </value>
            <value>
                <fullName>Server</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>