force-app/main/default/objects/Case/fields/Credit_Memo_Product__c.field-meta.xml
<CustomField>
    <fullName>Credit_Memo_Product__c</fullName>
    <label>Credit Memo Product</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SR Platform</fullName>
            </value>
            <value>
                <fullName>SR Smart Reviews</fullName>
            </value>
            <value>
                <fullName>SR Conversations</fullName>
            </value>
            <value>
                <fullName>SR Scheduler</fullName>
            </value>
            <value>
                <fullName>SR Practice Marketing</fullName>
            </value>
            <value>
                <fullName>Patient Reach Tablet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>