force-app/main/default/objects/Case/fields/Credit_Memo_Reason__c.field-meta.xml
<CustomField>
    <fullName>Credit_Memo_Reason__c</fullName>
    <label>Credit Memo Reason</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Service Issues</fullName>
            </value>
            <value>
                <fullName>Escalation</fullName>
            </value>
            <value>
                <fullName>Incentive</fullName>
            </value>
            <value>
                <fullName>Billing Issue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>