force-app/main/default/objects/Case/fields/CS_Round_Robin_ID__c.field-meta.xml
<CustomField>
    <fullName>CS_Round_Robin_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Rep&#39;s User ID for Round Robin Assignment</description>
    <label>CS Round Robin ID</label>
    <referenceTo>CS_Round_Robin__c</referenceTo>
    <relationshipLabel>Activation Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>