force-app/main/default/objects/Case/fields/Custom_Settings_Class__c.field-meta.xml
<CustomField>
    <fullName>Custom_Settings_Class__c</fullName>
    <formula>IF( NOT( ISNULL ( Custom_Settings_Completed__c )), &#39;complete&#39;, IF( NOW() - CreatedDate &gt;  10, &#39;late&#39;, if( NOW() - CreatedDate &gt; 7, &#39;atrisk&#39;,  &#39;incomplete&#39;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Custom Settings Class</label>
    <type>Text</type>
</CustomField>