force-app/main/default/objects/Case/fields/Custom_Settings_Completed__c.field-meta.xml
<CustomField>
    <fullName>Custom_Settings_Completed__c</fullName>
    <label>Custom Settings Completed</label>
    <type>DateTime</type>
</CustomField>