force-app/main/default/objects/Case/fields/Custom_Settings_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>Custom_Settings_Scheduled__c</fullName>
    <label>Custom Settings Scheduled</label>
    <type>DateTime</type>
</CustomField>