force-app/main/default/objects/Case/fields/Custom_Settings_Scheduled_For__c.field-meta.xml
<CustomField>
    <fullName>Custom_Settings_Scheduled_For__c</fullName>
    <label>Custom Settings Scheduled For</label>
    <type>DateTime</type>
</CustomField>