force-app/main/default/objects/Case/fields/Customer_s_Antivirus__c.field-meta.xml
<CustomField>
    <fullName>Customer_s_Antivirus__c</fullName>
    <label>Customer&#39;s Antivirus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Master List</fullName>
            </value>
            <value>
                <fullName>Avast</fullName>
            </value>
            <value>
                <fullName>BitDefender</fullName>
            </value>
            <value>
                <fullName>Emsisoft</fullName>
            </value>
            <value>
                <fullName>ESET NOD32</fullName>
            </value>
            <value>
                <fullName>F-Secure</fullName>
            </value>
            <value>
                <fullName>Kaspersky</fullName>
            </value>
            <value>
                <fullName>McAfee</fullName>
            </value>
            <value>
                <fullName>Norton</fullName>
            </value>
            <value>
                <fullName>TrendMicro</fullName>
            </value>
            <value>
                <fullName>Webroot</fullName>
            </value>
            <value>
                <fullName>AVG</fullName>
            </value>
            <value>
                <fullName>Windows Defender</fullName>
            </value>
            <value>
                <fullName>Multiple</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>