force-app/main/default/objects/Case/fields/Days_to_Custom_Settings_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Custom_Settings_Scheduled__c</fullName>
    <formula>(5 * ( FLOOR( ( DateValue(Custom_Settings_Scheduled__c) - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( DateValue(Custom_Settings_Scheduled__c) - DATE( 1900, 1, 8), 7 ) ) )
-
(5 * ( FLOOR( ( DateValue(CreatedDate) - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( Datevalue(CreatedDate) - DATE( 1900, 1, 8), 7 ) ) )</formula>
    <label>Days to Custom Settings Scheduled</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>