force-app/main/default/objects/Case/fields/Days_to_First_Contact__c.field-meta.xml
<CustomField>
    <fullName>Days_to_First_Contact__c</fullName>
    <formula>(5 * ( FLOOR( ( DateValue(First_Contact__c) - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( DateValue(First_Contact__c) - DATE( 1900, 1, 8), 7 ) ) ) 
- 
(5 * ( FLOOR( ( DateValue(CreatedDate) - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( Datevalue(CreatedDate) - DATE( 1900, 1, 8), 7 ) ) )</formula>
    <label>Days to First Contact</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>