force-app/main/default/objects/Case/fields/Distribution_Group__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Distribution Group</label>
    <referenceTo>Distribution_Group__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>