force-app/main/default/objects/Case/fields/Email_Alerts_Sent__c.field-meta.xml
<CustomField>
    <fullName>Email_Alerts_Sent__c</fullName>
    <description>Field to store the email template name of workflow rule email alert sent from the record.</description>
    <label>Email Alerts Sent</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>