force-app/main/default/objects/Case/fields/Escalation_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Date_Time__c</fullName>
    <description>Date and Time that the call was Escalated to a Supervisor.</description>
    <inlineHelpText>Date and Time that the call was Escalated to a Supervisor.</inlineHelpText>
    <label>Escalation Date/Time</label>
    <type>DateTime</type>
</CustomField>