force-app/main/default/objects/Case/fields/Features_Options__c.field-meta.xml
<CustomField>
    <fullName>Features_Options__c</fullName>
    <label>Features/Options</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Category__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Account Questions</fullName>
            </value>
            <value>
                <fullName>Action List</fullName>
            </value>
            <value>
                <fullName>AppAdmin</fullName>
            </value>
            <value>
                <fullName>Birthdays</fullName>
            </value>
            <value>
                <fullName>Business Associates Agreement</fullName>
            </value>
            <value>
                <fullName>Care Credit</fullName>
            </value>
            <value>
                <fullName>Community</fullName>
            </value>
            <value>
                <fullName>Contract</fullName>
            </value>
            <value>
                <fullName>Contract Addendum</fullName>
            </value>
            <value>
                <fullName>Conversations</fullName>
            </value>
            <value>
                <fullName>Determine Need</fullName>
            </value>
            <value>
                <fullName>Dynamic Messaging</fullName>
            </value>
            <value>
                <fullName>Email Request</fullName>
            </value>
            <value>
                <fullName>Eyewear</fullName>
            </value>
            <value>
                <fullName>Groups</fullName>
            </value>
            <value>
                <fullName>Groups/Newsletter</fullName>
            </value>
            <value>
                <fullName>Healthgrades</fullName>
            </value>
            <value>
                <fullName>Information</fullName>
            </value>
            <value>
                <fullName>Initial Troubleshooting</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>Marketing/Sales Promotions</fullName>
            </value>
            <value>
                <fullName>New Features</fullName>
            </value>
            <value>
                <fullName>Newsletters</fullName>
            </value>
            <value>
                <fullName>Online Presence</fullName>
            </value>
            <value>
                <fullName>Password</fullName>
            </value>
            <value>
                <fullName>Patient Call</fullName>
            </value>
            <value>
                <fullName>Patient Profile</fullName>
            </value>
            <value>
                <fullName>Payment Reminders</fullName>
            </value>
            <value>
                <fullName>PRM</fullName>
            </value>
            <value>
                <fullName>PRP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>