force-app/main/default/objects/Case/fields/Final_Call__c.field-meta.xml
<CustomField>
    <fullName>Final_Call__c</fullName>
    <label>Final Call</label>
    <type>DateTime</type>
</CustomField>