force-app/main/default/objects/Case/fields/Final_Call_Class__c.field-meta.xml
<CustomField>
    <fullName>Final_Call_Class__c</fullName>
    <formula>IF( NOT( ISNULL (Final_Call_Completed__c)), &#39;complete&#39;, IF( NOW() - CreatedDate &gt; 70, &#39;late&#39;, if( NOW() - CreatedDate &gt; 65, &#39;atrisk&#39;, &#39;incomplete&#39;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final Call Class</label>
    <type>Text</type>
</CustomField>