force-app/main/default/objects/Case/fields/Final_Call_Completed__c.field-meta.xml
<CustomField>
    <fullName>Final_Call_Completed__c</fullName>
    <label>Final Call Completed</label>
    <type>DateTime</type>
</CustomField>