force-app/main/default/objects/Case/fields/First_Contact__c.field-meta.xml
<CustomField>
    <fullName>First_Contact__c</fullName>
    <description>The date and time of the first activity on this case</description>
    <label>First Contact</label>
    <type>DateTime</type>
</CustomField>