force-app/main/default/objects/Case/fields/First_Contact_Class__c.field-meta.xml
<CustomField>
    <fullName>First_Contact_Class__c</fullName>
    <formula>IF( NOT( ISNULL (First_Contact__c)), &#39;complete&#39;, IF( NOW() - CreatedDate &gt;  1, &#39;late&#39;, if( NOW() - CreatedDate &gt; 0.5, &#39;atrisk&#39;,  &#39;incomplete&#39;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First Contact Class</label>
    <type>Text</type>
</CustomField>