force-app/main/default/objects/Case/fields/Five9__Five9LastEmailMessageId__c.field-meta.xml
<CustomField>
    <fullName>Five9__Five9LastEmailMessageId__c</fullName>
    <label>Five9 LastEmailMessageId</label>
    <length>30</length>
    <type>Text</type>
</CustomField>