force-app/main/default/objects/Case/fields/Five9__Five9ThreadId__c.field-meta.xml
<CustomField>
    <fullName>Five9__Five9ThreadId__c</fullName>
    <formula>&quot;[ ref:_&quot;&amp;LEFT( $Organization.Id , 4)&amp;&quot;0&quot;&amp;RIGHT( $Organization.Id , 4)&amp;&quot;._&quot;&amp;LEFT(Id , 4)&amp;&quot;0&quot;&amp;RIGHT(Id , 5)&amp;&quot;:ref ]&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Five9 ThreadId</label>
    <type>Text</type>
</CustomField>