force-app/main/default/objects/Case/fields/Graphics_Setup_Class__c.field-meta.xml
<CustomField>
    <fullName>Graphics_Setup_Class__c</fullName>
    <formula>IF( NOT( ISNULL (Graphics_Task_Completed__c)), 
	&#39;complete&#39;, 
	IF( NOW() - CreatedDate &gt; 4, 
		&#39;late&#39;, 
		IF( NOW() - CreatedDate &gt; 2, 
			&#39;atrisk&#39;,
			&#39;incomplete&#39;
		)
	)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Graphics Setup Class</label>
    <type>Text</type>
</CustomField>