force-app/main/default/objects/Case/fields/Graphics_Task_Claimed__c.field-meta.xml
<CustomField>
    <fullName>Graphics_Task_Claimed__c</fullName>
    <label>Graphics Task Claimed</label>
    <type>DateTime</type>
</CustomField>