force-app/main/default/objects/Case/fields/Graphics_Task_Completed__c.field-meta.xml
<CustomField>
    <fullName>Graphics_Task_Completed__c</fullName>
    <label>Graphics Task Completed</label>
    <type>DateTime</type>
</CustomField>