force-app/main/default/objects/Case/fields/Healthgrades_Status__c.field-meta.xml
<CustomField>
    <fullName>Healthgrades_Status__c</fullName>
    <description>Set on Activation cases for customers who signup with Healthgrades before their SR Activation case has closed.</description>
    <label>Healthgrades Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Applicable</fullName>
                <default>true</default>
                <label>Not Applicable</label>
            </value>
            <value>
                <fullName>Setup Required</fullName>
            </value>
            <value>
                <fullName>Setup Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>