force-app/main/default/objects/Case/fields/HG_Conditions__c.field-meta.xml
<CustomField>
    <fullName>HG_Conditions__c</fullName>
    <label>HG Conditions</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>