force-app/main/default/objects/Case/fields/HG_Procedures__c.field-meta.xml
<CustomField>
    <fullName>HG_Procedures__c</fullName>
    <label>HG Procedures</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>