force-app/main/default/objects/Case/fields/HG_PWID__c.field-meta.xml
<CustomField>
    <fullName>HG_PWID__c</fullName>
    <formula>Provider__r.PUID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HG PWID</label>
    <type>Text</type>
</CustomField>