force-app/main/default/objects/Case/fields/HG_Specialties__c.field-meta.xml
<CustomField>
    <fullName>HG_Specialties__c</fullName>
    <label>HG Specialties</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>