force-app/main/default/objects/Case/fields/ICU_Target__c.field-meta.xml
<CustomField>
    <fullName>ICU_Target__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Select an ICU Target that is currently being worked on</inlineHelpText>
    <label>Related Target</label>
    <referenceTo>ICU_Target__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>