force-app/main/default/objects/Case/fields/In_Integrations__c.field-meta.xml
<CustomField>
    <fullName>In_Integrations__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This gets checked automatically when an activation case gets checked as In Integrations</description>
    <label>In Integrations</label>
    <type>Checkbox</type>
</CustomField>