force-app/main/default/objects/Case/fields/Kick_Off_Call__c.field-meta.xml
<CustomField>
    <fullName>Kick_Off_Call__c</fullName>
    <label>Kick Off Call</label>
    <type>DateTime</type>
</CustomField>