force-app/main/default/objects/Case/fields/Kick_Off_Call_Class__c.field-meta.xml
<CustomField>
    <fullName>Kick_Off_Call_Class__c</fullName>
    <formula>IF( NOT( ISNULL (Kick_Off_Call_Completed__c)), &#39;complete&#39;, IF( NOW() - CreatedDate &gt; 15, &#39;late&#39;, if( NOW() - CreatedDate &gt; 7, &#39;atrisk&#39;, &#39;incomplete&#39;)))</formula>
    <label>Kick Off Call Class</label>
    <type>Text</type>
</CustomField>