force-app/main/default/objects/Case/fields/Kick_Off_Call_Completed__c.field-meta.xml
<CustomField>
    <fullName>Kick_Off_Call_Completed__c</fullName>
    <label>Kick Off Call Completed</label>
    <type>DateTime</type>
</CustomField>