force-app/main/default/objects/Case/fields/Last_Sync_Class__c.field-meta.xml
<CustomField>
    <fullName>Last_Sync_Class__c</fullName>
    <formula>IF( AND( NOT( ISNULL ( Account.Admin_Last_Sync_Date__c )), Today() - Account.Admin_Last_Sync_Date__c &gt; 4), &#39;late&#39;, IF( AND( NOT( ISNULL ( Account.Admin_Last_Sync_Date__c )), Today() - Account.Admin_Last_Sync_Date__c &gt; 2), &#39;atrisk&#39;, IF( NOT( ISNULL ( Account.Admin_Last_Sync_Date__c)), &#39;complete&#39;, IF( NOW() - CreatedDate &gt; 7, &#39;late&#39;, if( NOW() - CreatedDate &gt; 1, &#39;atrisk&#39;, &#39;incomplete&#39;)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Sync Class</label>
    <type>Text</type>
</CustomField>