force-app/main/default/objects/Case/fields/Last_Sync_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Sync_Date__c</fullName>
    <formula>Account.Admin_Last_Sync_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Sync Date</label>
    <type>Date</type>
</CustomField>