force-app/main/default/objects/Case/fields/Locations__c.field-meta.xml
<CustomField>
    <fullName>Locations__c</fullName>
    <formula>TEXT( Related_Opportunity__r.Locations__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Locations</label>
    <type>Text</type>
</CustomField>