force-app/main/default/objects/Case/fields/Logged_in_User_has_Full_Access__c.field-meta.xml
<CustomField>
    <fullName>Logged_in_User_has_Full_Access__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>On the File Permission does the specific user that is logged in have full access to read and write?</inlineHelpText>
    <label>Logged in User has Full Access</label>
    <type>Checkbox</type>
</CustomField>