force-app/main/default/objects/Case/fields/Main_Issue__c.field-meta.xml
<CustomField>
    <fullName>Main_Issue__c</fullName>
    <label>Main Issue</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Features_Options__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>3rd Party Settings</fullName>
            </value>
            <value>
                <fullName>Activate account</fullName>
            </value>
            <value>
                <fullName>Additional Providers</fullName>
            </value>
            <value>
                <fullName>Additional Training</fullName>
            </value>
            <value>
                <fullName>Add Voice</fullName>
            </value>
            <value>
                <fullName>Adjust Sync Times</fullName>
            </value>
            <value>
                <fullName>Adjust Templates</fullName>
            </value>
            <value>
                <fullName>Alerts Inbox</fullName>
            </value>
            <value>
                <fullName>Appointment Requests</fullName>
            </value>
            <value>
                <fullName>Assignment Agreement</fullName>
            </value>
            <value>
                <fullName>Banner Image</fullName>
            </value>
            <value>
                <fullName>Campaign Setup</fullName>
            </value>
            <value>
                <fullName>Cancel Request</fullName>
            </value>
            <value>
                <fullName>CanSpam</fullName>
            </value>
            <value>
                <fullName>CASL</fullName>
            </value>
            <value>
                <fullName>Check in</fullName>
            </value>
            <value>
                <fullName>Copy of contract</fullName>
            </value>
            <value>
                <fullName>Create Group</fullName>
            </value>
            <value>
                <fullName>CS Training Queue Request</fullName>
            </value>
            <value>
                <fullName>Custom Newsletter</fullName>
            </value>
            <value>
                <fullName>Custom Schedule</fullName>
            </value>
            <value>
                <fullName>Database Connection</fullName>
            </value>
            <value>
                <fullName>Deferral</fullName>
            </value>
            <value>
                <fullName>Deferral - Healthgrades</fullName>
            </value>
            <value>
                <fullName>Deferral - Limelight</fullName>
            </value>
            <value>
                <fullName>Delivery Settings</fullName>
            </value>
            <value>
                <fullName>Dentrix G5</fullName>
            </value>
            <value>
                <fullName>Detailed Reports</fullName>
            </value>
            <value>
                <fullName>Device Enable/Disable</fullName>
            </value>
            <value>
                <fullName>Direct Messaging</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>