force-app/main/default/objects/Case/fields/Midway_Decision_Maker_Call_Class__c.field-meta.xml
<CustomField>
    <fullName>Midway_Decision_Maker_Call_Class__c</fullName>
    <formula>IF( NOT( ISNULL (Midway_Decision_Maker_Call_Completed__c)), &#39;complete&#39;, IF( NOW() - CreatedDate &gt; 40, &#39;late&#39;, if( NOW() - CreatedDate &gt; 35, &#39;atrisk&#39;, &#39;incomplete&#39;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Midway Decision Maker Call Class</label>
    <type>Text</type>
</CustomField>