force-app/main/default/objects/Case/fields/Midway_Decision_Maker_Call_Completed__c.field-meta.xml
<CustomField>
    <fullName>Midway_Decision_Maker_Call_Completed__c</fullName>
    <label>Midway Decision Maker Call Completed</label>
    <type>DateTime</type>
</CustomField>