force-app/main/default/objects/Case/fields/Next_Business_Day__c.field-meta.xml
<CustomField>
    <fullName>Next_Business_Day__c</fullName>
    <formula>Case(
 MOD( Today () - DATE ( 1900,1,7), 7 ),
  5, Today () +3,
  6, Today () +2,
  Today () + 1
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Next Business Day</label>
    <type>Date</type>
</CustomField>