force-app/main/default/objects/Case/fields/nfchat__Chat_Log__c.field-meta.xml
<CustomField>
    <fullName>nfchat__Chat_Log__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Chat Log</label>
    <referenceTo>nfchat__Chat_Log__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>