force-app/main/default/objects/Case/fields/NL_Groups_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>NL_Groups_Completed_Date__c</fullName>
    <label>NL/Groups Completed Date</label>
    <type>DateTime</type>
</CustomField>